--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,6 +23,7 @@ security:
         api:
             pattern: ^/api
             stateless: true
+            jwt: ~
         main:
             lazy: true
             provider: app_user_provider
@@ -36,8 +37,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/api/portables, roles: IS_AUTHENTICATED_FULLY }
+         - { path: ^/login, roles: PUBLIC_ACCESS }
+         - { path: ^/users, roles: IS_AUTHENTICATED_FULLY, method:[POST, DELETE, PUT] }
 
 when@test:
     security:
