--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,7 +23,7 @@ security:
         api:
             pattern: ^/api
             stateless: true
-            jwt: ~
+#            jwt: ~
         main:
             lazy: true
             provider: app_user_provider
@@ -37,9 +37,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/api/portables, roles: IS_AUTHENTICATED_FULLY }
-         - { path: ^/login, roles: PUBLIC_ACCESS }
-         - { path: ^/users, roles: IS_AUTHENTICATED_FULLY, method:[POST, DELETE, PUT] }
+#         - { path: ^/api/portables, roles: IS_AUTHENTICATED_FULLY }
+#         - { path: ^/login, roles: PUBLIC_ACCESS }
+#         - { path: ^/users, roles: IS_AUTHENTICATED_FULLY, method:[POST, DELETE, PUT] }
 
 when@test:
     security:
